<resources>
    <string name="app_name">Secret Santa</string>
    <string name="instructive_labels_text">Enter a name and tap NEXT to add that person to the list, continue entering names and when finished tap NEXT then DONE.</string>
    <string name="dispensing_label_initial_text">...</string>
    <string name="text_on_Done_button">Done</string>
    <string name="text_on_Next_button">Next</string>
    <string name="text_on_Reset_button">Complete Reset</string>
    <string name="text_on_Draw_Again_button">Draw again</string>
    <string name="enter_name_fields_hint_text">Enter Name</string>
    <string name="enter_name_fields_initial_text"></string>
    <string name="toastmsg_1st_popup_after_a_finished_round">Finished!</string>
    <string name="toastmsg_attempt_to_add_no_name">Enter a name in the field.</string>
    <string name="toastmsg_attempt_to_add_name_again">cannot add the same name twice.</string>

</resources>
